--- a/federated-npm/package.json
+++ b/federated-npm/package.json
@@ -12,7 +12,7 @@
     "build": "lerna run build",
     "serve": "lerna run --scope=federated-npm_* --parallel serve",
     "clean": "lerna run --scope=federated-npm_* --parallel clean",
-    "e2e:ci": "yarn start & wait-on http-get://localhost:3001/ && npx cypress run --config-file ../cypress/config/cypress.config.ts --config '{\"supportFile\": \"../cypress/support/e2e.ts\"}' --spec \"./e2e/*.cy.ts\" --browser=chrome"
+    "e2e:ci": "yarn start & wait-on http-get://localhost:3001/ && npx cypress run --config-file ../cypress/config/cypress.config.js --config '{\\\"supportFile\\\": \\\"../cypress/support/e2e.ts\\\"}' --spec \\\"./e2e/*.cy.ts\\\" --browser=chrome"
   },
   "devDependencies": {
     "wait-on": "7.0.1"
