--- a/loadable-react-16/package.json
+++ b/loadable-react-16/package.json
@@ -13,7 +13,7 @@
     "build": "lerna run --scope=loadable-react-16_* build",
     "serve": "lerna run --scope=loadable-react-16_* --parallel serve",
     "clean": "lerna run --scope=loadable-react-16_* --parallel clean",
-    "e2e:ci": "yarn start & wait-on http-get://localhost:3000/ && npx cypress run --config-file ../cypress/config/cypress.config.ts --config '{\"supportFile\": \"../cypress/support/e2e.ts\"}' --spec \"./e2e/*.cy.ts\" --browser=chrome"
+    "e2e:ci": "yarn start & wait-on http-get://localhost:3000/ && npx cypress run --config-file ../cypress/config/cypress.config.js --config '{\\\"supportFile\\\": \\\"../cypress/support/e2e.ts\\\"}' --spec \\\"./e2e/*.cy.ts\\\" --browser=chrome"
   },
   "devDependencies": {
     "wait-on": "7.0.1"
