--- a/comprehensive-demo-react16/package.json
+++ b/comprehensive-demo-react16/package.json
@@ -14,7 +14,7 @@
     "build": "lerna run --scope=comprehensive-demo-react16_app* build",
     "serve": "lerna run --scope=comprehensive-demo-react16_app* --parallel serve",
     "clean": "lerna run --scope=comprehensive-demo-react16_app* --parallel clean",
-    "e2e:ci": "yarn start & wait-on http-get://localhost:3001/ && npx cypress run --config-file ../cypress/config/cypress.config.js --config '{\\\"supportFile\\\": \\\"../cypress/support/e2e.ts\\\"}' --spec \\\"./e2e/runAll*.cy.ts\\\" --browser=chrome"
+    "e2e:ci": "yarn start & wait-on http-get://localhost:3001/ && npx cypress run --config-file ../cypress/config/cypress.config.js --config '{\\\"supportFile\\\": \\\"../cypress/support/e2e.js\\\"}' --spec \\\"./e2e/runAll*.cy.js\\\" --browser=chrome"
   },
   "devDependencies": {
     "concurrently": "7.6.0",
