--- a/different-react-versions/package.json
+++ b/different-react-versions/package.json
@@ -11,7 +11,7 @@
     "build": "lerna run --scope=different-react-versions_app* build",
     "serve": "lerna run --scope=different-react-versions_app* --parallel serve",
     "clean": "lerna run --scope=different-react-versions_app* --parallel clean",
-    "e2e:ci": "yarn start & wait-on http-get://localhost:3001/ && npx cypress run --config-file ../cypress/config/cypress.config.js --config '{\\\"supportFile\\\": \\\"../cypress/support/e2e.ts\\\"}' --spec \\\"./e2e/*.cy.ts\\\" --browser=chrome"
+    "e2e:ci": "yarn start & wait-on http-get://localhost:3001/ && npx cypress run --config-file ../cypress/config/cypress.config.js --config '{\\\"supportFile\\\": \\\"../cypress/support/e2e.js\\\"}' --spec \\\"./e2e/*.cy.js\\\" --browser=chrome"
   },
   "devDependencies": {
     "wait-on": "7.0.1"
