--- a/vite-vue-microfrontends/package.json
+++ b/vite-vue-microfrontends/package.json
@@ -19,7 +19,7 @@
     "build:remote": "npm --prefix ./remote run build",
     "preview:host": "npm --prefix ./host run build && npm --prefix ./host run preview",
     "preview:remote": "npm --prefix ./remote run build && npm --prefix ./remote run preview",
-    "e2e:ci": "yarn preview:remote && yarn preview:host & wait-on http-get://localhost:4173/ && npx cypress run --config-file ../cypress/config/cypress.config.js --config '{\\\"supportFile\\\": \\\"../cypress/support/e2e.ts\\\"}' --spec \\\"./e2e/tests/runAll.cy.ts\\\" --browser=chrome"
+    "e2e:ci": "yarn preview:remote && yarn preview:host & wait-on http-get://localhost:4173/ && npx cypress run --config-file ../cypress/config/cypress.config.js --config '{\\\"supportFile\\\": \\\"../cypress/support/e2e.js\\\"}' --spec \\\"./e2e/tests/runAll.cy.js\\\" --browser=chrome"
   },
   "author": {
     "name": "Giorgio Boa",
