--- a/i18next-nextjs-react/package.json
+++ b/i18next-nextjs-react/package.json
@@ -14,7 +14,7 @@
   "main": "index.js",
   "scripts": {
     "start": "concurrently \"cd next-host; npm run dev\" \"cd react-host; npm run start:live\" \"cd react-remote; npm run start:live\" \"cd i18next-shared-lib; npm run dev\"",
-    "e2e:ci": "yarn start & wait-on http-get://localhost:3000/ && npx cypress run --config-file ../cypress/config/cypress.config.js --config '{\\\"supportFile\\\": \\\"../cypress/support/e2e.ts\\\"}' --spec \\\"./e2e/runAll*.cy.ts\\\" --browser=chrome"
+    "e2e:ci": "yarn start & wait-on http-get://localhost:3000/ && npx cypress run --config-file ../cypress/config/cypress.config.js --config '{\\\"supportFile\\\": \\\"../cypress/support/e2e.js\\\"}' --spec \\\"./e2e/runAll*.cy.js\\\" --browser=chrome"
   },
   "author": "Frédéric JAMMES",
   "license": "ISC",
