--- a/dynamic-system-host/package.json
+++ b/dynamic-system-host/package.json
@@ -12,7 +12,7 @@
     "build": "lerna run --scope=dynamic-system-host_app* build",
     "serve": "lerna run --scope=dynamic-system-host_app* --parallel serve",
     "clean": "lerna run --scope=dynamic-system-host_app* --parallel clean",
-    "e2e:ci": "yarn start & wait-on http-get://localhost:3001/ && npx cypress run --config-file ../cypress/config/cypress.config.js --config '{\\\"supportFile\\\": \\\"../cypress/support/e2e.js\\\"}' --spec \\\"./e2e/*.cy.js\\\" --browser=chrome"
+    "e2e:ci": "yarn start & wait-on http-get://localhost:3001/ && npx cypress run --config-file ../cypress/config/cypress.config.js --config '{\"supportFile\": \"../../cypress/support/e2e.js\"}' --spec \"./e2e/tests/runAll.cy.js\" --browser=chrome"
   },
   "devDependencies": {
     "wait-on": "7.0.1"
