--- a/vite-react-microfrontends/package.json
+++ b/vite-react-microfrontends/package.json
@@ -19,7 +19,7 @@
 		"build:remote": "npm --prefix ./remote run build",
 		"preview:host": "npm --prefix ./host run preview",
 		"preview:remote": "npm --prefix ./remote run preview",
-		"e2e:test": "npx cypress run --config-file ../cypress/config/cypress.config.js --config '{\\\"supportFile\\\": \\\"../cypress/support/e2e.js\\\"}' --spec \\\"./e2e/tests/runAll*.cy.js\\\" --browser=chrome",
+		"e2e:test": "npx cypress run --config-file ../cypress/config/cypress.config.js --config '{\"supportFile\": \"../../cypress/support/e2e.js\"}' --spec \\\"./e2e/tests/runAll*.cy.js\\\" --browser=chrome",
 		"e2e:ci": "node e2e.ci.js"
 	},
 	"author": {
