--- a/vue2-in-vue3/package.json
+++ b/vue2-in-vue3/package.json
@@ -13,7 +13,7 @@
     "build": "lerna run --scope=vue2-in-vue3_vue* build",
     "serve": "lerna run --scope=vue2-in-vue3_vue* --parallel serve",
     "clean": "lerna run --scope=vue2-in-vue3_vue* --parallel clean",
-    "e2e:ci": "yarn start & wait-on http-get://localhost:3002/ && npx cypress run --config-file ../cypress/config/cypress.config.js --config '{\\\"supportFile\\\": \\\"../cypress/support/e2e.js\\\"}' --spec \\\"./e2e/tests/*.cy.js\\\" --browser=chrome"
+    "e2e:ci": "yarn start & wait-on http-get://localhost:3002/ && npx cypress run --config-file ../cypress/config/cypress.config.js --config '{\"supportFile\": \"../../cypress/support/e2e.js\"}' --spec \\\"./e2e/tests/*.cy.js\\\" --browser=chrome"
   },
   "devDependencies": {
     "wait-on": "7.0.1"
