--- a/native-federation-react/package.json
+++ b/native-federation-react/package.json
@@ -17,7 +17,7 @@
     "start:remote": "serve dist/remote -l 3001 --cors",
     "start:host": "serve dist/host -l 3000",
     "start": "concurrently \"npm run start:remote\" \"npm run start:host\"",
-    "e2e:ci": "npm run build && npm run start & wait-on http-get://localhost:3000/ && npx cypress run --config-file ../cypress/config/cypress.config.js --config '{\"supportFile\": \"../../cypress/support/e2e.js\"}' --spec \\\"./e2e/tests/runAll.cy.js\\\" --browser=chrome"
+    "e2e:ci": "npm run build && npm run start & wait-on http-get://localhost:3000/ && npx cypress run --config-file ../cypress/config/cypress.config.ts --config '{\"supportFile\": \"../cypress/support/e2e.ts\"}' --spec \"./e2e/tests/runAll.cy.ts\" --browser=chrome"
   },
   "keywords": [],
   "author": "",
