convert to JS from TS

--- a/.github/workflows/on-pull-request.yml
+++ b/.github/workflows/on-pull-request.yml
@@ -225,7 +225,7 @@ jobs:
 
         # Hash yarn.lock files to use it as a cache key, if yarn.lock files are changed, the cache will be invalidated
       - name: Check Yarn hash
-        id: check-yarn-hash-e2e
+        id: check-yarn-hash
         run: |
           yarnHash="$(npx hash-files -f '["**/yarn.lock"]' -a sha256)"
           echo "yarnHash=$yarnHash" >> $GITHUB_OUTPUT
@@ -235,7 +235,7 @@ jobs:
         uses: actions/cache/restore@v3
         with:
           path: ${{ env.CACHE_PATH }}
-          key: e2e-cache-${{ steps.check-yarn-hash-e2e.outputs.yarnHash }}
+          key: e2e-cache-${{ steps.check-yarn-hash.outputs.yarnHash }}
           restore-keys: |
             e2e-cache-
             e2e-
