convert to JS from TS

--- a/.github/workflows/on-pull-request.yml
+++ b/.github/workflows/on-pull-request.yml
@@ -147,20 +147,12 @@ jobs:
         id: restore-yarn-global-cache
         uses: actions/cache/restore@v3
         with:
-          path: ${{ env.YARN_CACHE_PATH }}
+          path: |
+            ${{ env.YARN_CACHE_PATH }}
+            ${{ env.CACHE_PATH }}
           key: yarn-global-cache-${{ steps.check-yarn-hash.outputs.yarnHash }} # Can use time based key as well
           restore-keys: |
-            yarn-global-cache
             yarn-global-cache-
-      - name: Restore Yarn and Cypress cache
-        id: restore-yarn-cypress-cache
-        uses: actions/cache/restore@v3
-        with:
-          path: ${{ env.CACHE_PATH }}
-          key: e2e-cache-${{ steps.check-yarn-hash.outputs.yarnHash }}
-          restore-keys: |
-            e2e-cache-
-            e2e-
 
       - name: Check disk space before install
         id: check-disk-space-before-install
@@ -169,7 +161,7 @@ jobs:
 
       - name: Install dependencies
         id: install-dependencies
-        if: steps.restore-yarn-cypress-cache.outputs.cache-hit != 'true'
+        if: steps.restore-yarn-global-cache.outputs.cache-hit != 'true'
         env:
           NODE_OPTIONS: "--max_old_space_size=4096"
         run: |
@@ -177,20 +169,15 @@ jobs:
           npm install lerna@6 -g
           lerna bootstrap
       - name: Cache Yarn and Cypress
-        if: steps.restore-yarn-cypress-cache.outputs.cache-hit != 'true'
+        if: steps.restore-yarn-global-cache.outputs.cache-hit != 'true'
         id: cache-yarn-cypress
         uses: actions/cache/save@v3
         with:
-          path: ${{ env.YARN_CACHE_PATH }}
+          path: |
+            ${{ env.YARN_CACHE_PATH }}
+            ${{ env.CACHE_PATH }}
           key: yarn-global-cache-${{ steps.check-yarn-hash.outputs.yarnHash }} # Can use time based key as well
 
-      - name: Create additional cache
-        if: steps.restore-yarn-global-cache.outputs.cache-hit != 'true'
-        id: create-additional-cache
-        uses: actions/cache/save@v3
-        with:
-          path: ${{ env.CACHE_PATH }}
-          key: e2e-cache-${{ steps.check-yarn-hash.outputs.yarnHash }}
       - name: Check disk space after installation
         id: check-disk-space-after-installation
         run: |
@@ -230,21 +217,13 @@ jobs:
           yarnHash="$(npx hash-files -f '["**/yarn.lock"]' -a sha256)"
           echo "yarnHash=$yarnHash" >> $GITHUB_OUTPUT
 
-      - name: Restore Yarn and Cypress cache
-        id: restore-yarn-cypress-cache-e2e
-        uses: actions/cache/restore@v3
-        with:
-          path: ${{ env.CACHE_PATH }}
-          key: e2e-cache-${{ steps.check-yarn-hash.outputs.yarnHash }}
-          restore-keys: |
-            e2e-cache-
-            e2e-
-
       - name: Restore Yarn Global Cache
         id: restore-yarn-global-cache-e2e
         uses: actions/cache/restore@v3
         with:
-          path: ${{ env.YARN_CACHE_PATH }}
+          path: |
+            ${{ env.YARN_CACHE_PATH }}
+            ${{ env.CACHE_PATH }}
           key: yarn-global-cache-${{ steps.check-yarn-hash.outputs.yarnHash }} # Can use time based key as well
           restore-keys: |
             yarn-global-cache
@@ -252,7 +231,7 @@ jobs:
 
       - name: Install deps
         id: install-deps-e2e
-        if: steps.restore-yarn-cypress-cache-e2e.outputs.cache-hit != 'true'
+        if: steps.restore-yarn-global-cache-e2e.outputs.cache-hit != 'true'
         env:
           NODE_OPTIONS: "--max_old_space_size=4096"
         run: |
@@ -269,20 +248,14 @@ jobs:
           echo 'test'
 
       - name: Cache Yarn and Cypress
-        if: steps.restore-yarn-cypress-cache-e2e.outputs.cache-hit != 'true'
+        if: steps.restore-yarn-global-cache-e2e.outputs.cache-hit != 'true'
         id: cache-yarn-cypress
         uses: actions/cache/save@v3
         with:
-          path: ${{ env.YARN_CACHE_PATH }}
+          path: |
+            ${{ env.YARN_CACHE_PATH }}
+            ${{ env.CACHE_PATH }}
           key: yarn-global-cache-${{ steps.check-yarn-hash.outputs.yarnHash }} # Can use time based key as well
-
-      - name: Create additional cache
-        if: steps.restore-yarn-global-cache-e2e.outputs.cache-hit != 'true'
-        id: create-additional-cache
-        uses: actions/cache/save@v3
-        with:
-          path: ${{ env.CACHE_PATH }}
-          key: e2e-cache-${{ steps.check-yarn-hash.outputs.yarnHash }}
 
       - name: Check disk space after install
         id: check-disk-space-after-install-e2e
