--- a/cypress/package.json
+++ b/cypress/package.json
@@ -3,5 +3,8 @@
   "version": "0.0.0",
   "main": "index.js",
   "license": "MIT",
-  "private": true
+  "private": true,
+  "dependencies": {
+    "typescript": "^5.2.2"
+  }
 }
