--- a/typescript/package.json
+++ b/typescript/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "typescript",
+  "name": "typescript-repo",
   "private": true,
   "workspaces": [
     "./app1",
@@ -12,8 +12,5 @@
     "serve": "lerna run --scope=typescript_* --parallel serve",
     "clean": "lerna run --scope=typescript_* --parallel clean",
     "e2e:ci": "yarn start & wait-on http-get://localhost:3001/ && npx cypress run --config-file ../cypress/config/cypress.config.ts --config '{\"supportFile\": \"../../cypress/support/e2e.js\"}' --spec \\\"./e2e/tests/*.cy.js\\\" --browser=chrome"
-  },
-  "devDependencies": {
-    "lerna": "3.22.1"
   }
 }
