--- a/typescript/package.json
+++ b/typescript/package.json
@@ -11,6 +11,6 @@
     "build": "lerna run --scope=typescript_* build",
     "serve": "lerna run --scope=typescript_* --parallel serve",
     "clean": "lerna run --scope=typescript_* --parallel clean",
-    "e2e:ci": "yarn start & wait-on http-get://localhost:3001/ && npx cypress run --config-file ../cypress/config/cypress.config.ts --config '{\"supportFile\": \"../../cypress/support/e2e.js\"}' --spec \\\"./e2e/tests/*.cy.js\\\" --browser=chrome"
+    "e2e:ci": "yarn start & wait-on http-get://localhost:3001/ && npx cypress run --config-file ../cypress/config/cypress.config.ts --config '{\"supportFile\": \"../cypress/support/e2e.js\"}' --spec \\\"./e2e/tests/*.cy.js\\\" --browser=chrome"
   }
 }
