convert to JS from TS

--- a/package.json
+++ b/package.json
@@ -94,6 +94,8 @@
     "modernjs-medusa/*",
     "typescript",
     "typescript/*",
+    "typescript-monorepo/*",
+    "typescript-monorepo",
     "native-federation-react",
     "native-federation-tests-typescript-plugins",
     "native-federation-tests-typescript-plugins/*",
