--- a/typescript-monorepo/package.json
+++ b/typescript-monorepo/package.json
@@ -11,10 +11,9 @@
     "build": "lerna run --scope=typescript-monorepo_app* build",
     "serve": "lerna run --scope=typescript-monorepo_app* --parallel serve",
     "clean": "lerna run --scope=typescript-monorepo_app* --parallel clean",
-    "e2e:ci": "yarn start & wait-on http-get://localhost:3001/ && npx cypress run --config-file ../cypress/config/cypress.config.ts --config '{\"supportFile\": \"../cypress/support/e2e.js\"}' --spec \\\"./e2e/tests/runAll.cy.js\\\" --browser=chrome"
+    "e2e:ci": "yarn start & wait-on http-get://localhost:3001/ && npx cypress run --config-file ../cypress/config/cypress.config.ts --config '{\"supportFile\": \"../cypress/support/e2e.ts\"}' --spec \\\"./e2e/tests/runAll.cy.js\\\" --browser=chrome"
   },
   "devDependencies": {
-    "lerna": "3.22.1",
     "wait-on": "7.0.1"
   }
 }
