--- a/typescript-monorepo/app2/package.json
+++ b/typescript-monorepo/app2/package.json
@@ -6,7 +6,9 @@
   "private": true,
   "typesVersions": {
     "*": {
-      "Button": ["./src/Button.tsx"]
+      "Button": [
+        "./src/Button.tsx"
+      ]
     }
   },
   "devDependencies": {
@@ -16,12 +18,12 @@
     "@types/react": "18.0.38",
     "@types/react-dom": "18.0.11",
     "babel-loader": "8.2.5",
-    "html-webpack-plugin": "5.5.1",
-    "serve": "13.0.4",
+    "html-webpack-plugin": "5.5.3",
+    "serve": "14.2.1",
     "typescript": "4.3.5",
-    "webpack": "5.80.0",
+    "webpack": "5.89.0",
     "webpack-cli": "4.10.0",
-    "webpack-dev-server": "4.13.3"
+    "webpack-dev-server": "4.15.1"
   },
   "scripts": {
     "start": "webpack-cli serve",
