--- a/typescript-monorepo/package.json
+++ b/typescript-monorepo/package.json
@@ -11,7 +11,7 @@
     "build": "lerna run --scope=typescript-monorepo_app* build",
     "serve": "lerna run --scope=typescript-monorepo_app* --parallel serve",
     "clean": "lerna run --scope=typescript-monorepo_app* --parallel clean",
-    "e2e:ci": "yarn start & wait-on http-get://localhost:3001/ && npx cypress run --config-file ../cypress/config/cypress.config.ts --config '{\"supportFile\": \"../cypress/support/e2e.ts\"}' --spec \\\"./e2e/tests/runAll.cy.js\\\" --browser=chrome"
+    "e2e:ci": "yarn start & wait-on http-get://localhost:3001/ && npx cypress run --config-file ../cypress/config/cypress.config.ts --config '{\"supportFile\": \"../cypress/support/e2e.ts\"}' --spec \"./e2e/tests/*.cy.ts\" --browser=chrome"
   },
   "devDependencies": {
     "wait-on": "7.0.1"
