convert to JS from TS

--- a/package.json
+++ b/package.json
@@ -96,6 +96,8 @@
     "typescript/*",
     "typescript-monorepo/*",
     "typescript-monorepo",
+    "typescript-project-references",
+    "typescript-project-references/*",
     "native-federation-react",
     "native-federation-tests-typescript-plugins",
     "native-federation-tests-typescript-plugins/*",
@@ -133,7 +135,8 @@
     "vue3-demo-federation-with-vite/*"
   ],
   "resolutions": {
-    "puppeteer": "^19.0.0"
+    "puppeteer": "^19.0.0",
+    "concurrently": "^7.6.0"
   },
   "devDependencies": {
     "@shelex/cypress-allure-plugin": "2.38.3",
