convert to JS from TS

--- a/package.json
+++ b/package.json
@@ -136,14 +136,15 @@
   ],
   "resolutions": {
     "puppeteer": "^19.0.0",
-    "concurrently": "^7.6.0"
+    "concurrently": "^7.6.0",
+    "cypress": "10.11.0"
   },
   "devDependencies": {
     "@shelex/cypress-allure-plugin": "2.38.3",
     "allure-commandline": "2.21.0",
     "concurrently": "7.6.0",
     "cross-spawn": "7.0.3",
-    "cypress": "10",
+    "cypress": "10.11.0",
     "cypress-fill-command": "1.0.2",
     "cypress-real-events": "1.10.3",
     "cypress-wait-until": "1.7.2",
