convert to JS from TS

--- a/package.json
+++ b/package.json
@@ -98,6 +98,8 @@
     "typescript-monorepo",
     "typescript-project-references",
     "typescript-project-references/*",
+    "typescript-react-fallback",
+    "typescript-react-fallback/*",
     "native-federation-react",
     "native-federation-tests-typescript-plugins",
     "native-federation-tests-typescript-plugins/*",
