convert to JS from TS

--- a/apollo-client/package.json
+++ b/apollo-client/package.json
@@ -11,6 +11,5 @@
     "serve": "lerna run --parallel serve",
     "build": "lerna run build"
   },
-  "devDependencies": {
-  }
+  "devDependencies": {}
 }
