--- a/advanced-api/dynamic-remotes-runtime-environment-variables/remote/package.json
+++ b/advanced-api/dynamic-remotes-runtime-environment-variables/remote/package.json
@@ -21,7 +21,7 @@
     "docker:rm": "docker rm -f csr-env-remote"
   },
   "dependencies": {
-    "copy-webpack-plugin": "^8.1.1",
+    "copy-webpack-plugin": "7.0.0",
     "moment": "^2.29.4",
     "react": "^16.13.0",
     "react-dom": "^16.13.0"
