convert to JS from TS

--- a/cra/package.json
+++ b/cra/package.json
@@ -16,7 +16,6 @@
   },
   "devDependencies": {
     "wait-on": "^7.1.0",
-    "concurrently": "7.6.0",
-    "forever": "4.0.3"
+    "concurrently": "7.6.0"
   }
 }
