--- a/vue-cli/package.json
+++ b/vue-cli/package.json
@@ -1,8 +1,6 @@
 {
   "name": "vue-cli",
   "private": true,
-
-
   "workspaces": [
     "./consumer",
     "./core",
@@ -15,7 +13,5 @@
     "serve": "lerna run --scope @vue-cli/* --parallel serve",
     "clean": "lerna run --scope @vue-cli/* --parallel clean"
   },
-  "devDependencies": {
-
-  }
+  "devDependencies": {}
 }
