staging back examples

--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
     "css-isolation",
     "css-isolation/*",
     "cypress",
+    "react-storybook",
+    "react-storybook/*",
     "delegate-modules",
     "delegate-modules/*",
     "different-react-versions",
