staging back examples

--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "comprehensive-demo-react18",
     "comprehensive-demo-react18/*",
     "cra",
+    "cra/*",
     "cra-react-app-rewired",
     "cra-react-app-rewired/*",
     "css-isolation",
@@ -132,6 +133,8 @@
     "vite-svelte-microfrontends/*",
     "vite-vue-microfrontends",
     "vite-vue-microfrontends/*",
+    "rust-wasm",
+    "rust-wasm/*",
     "vue-cli",
     "vue-cli/*",
     "vue2-in-vue3",
