staging back examples

--- a/package.json
+++ b/package.json
@@ -78,6 +78,8 @@
     "federated-library-from-cdn/*",
     "federated-npm",
     "federated-npm/*",
+    "self-healing",
+    "self-healing/*",
     "frontend-discovery-service",
     "frontend-discovery-service/*",
     "genesis",
