staging back examples

--- a/package.json
+++ b/package.json
@@ -139,6 +139,8 @@
     "vite-vue-microfrontends/*",
     "rust-wasm",
     "rust-wasm/*",
+    "redux-reducer-injection",
+    "redux-reducer-injection/*",
     "shared-routing",
     "shared-routing/*",
     "shared-routes2",
