staging back examples

--- a/package.json
+++ b/package.json
@@ -18,11 +18,11 @@
     "advanced-api/dynamic-remotes-runtime-environment-variables",
     "advanced-api/dynamic-remotes-synchronous-imports/*",
     "advanced-api/dynamic-remotes-synchronous-imports",
-    "angular-universal-ssr",
-    "angular11-microfrontends-ngrx",
-    "angular11-microfrontends-ngxs",
-    "angular11-microfrontends-scully",
-    "angular12-microfrontends",
+    "0angular-universal-ssr",
+    "0angular11-microfrontends-ngrx",
+    "0angular11-microfrontends-ngxs",
+    "0angular11-microfrontends-scully",
+    "0angular12-microfrontends",
     "umd-federation",
     "umd-federation/*",
     "angular14-react",
@@ -71,7 +71,9 @@
     "dynamic-system-host",
     "dynamic-system-host/*",
     "federated-css",
-    "federated-css/*/*",
+    "federated-css/consumers-nextjs/*",
+    "federated-css/consumers-react/*",
+    "federated-css/expose-remotes/*",
     "federated-css-react-ssr",
     "federated-css-react-ssr/*/*",
     "federated-library-from-cdn",
@@ -107,8 +109,8 @@
     "typescript-react-fallback/*",
     "typescript-react-monorepo",
     "typescript-react-monorepo/*",
-    "typescript-react-monorepo-test",
-    "typescript-react-monorepo-test/*",
+    "0typescript-react-monorepo-test",
+    "0typescript-react-monorepo-test/*",
     "native-federation-react",
     "native-federation-tests-typescript-plugins",
     "native-federation-tests-typescript-plugins/*",
@@ -129,30 +131,30 @@
     "version-discrepancy/*",
     "vite-react-microfrontends",
     "vite-react-microfrontends/*",
-    "simple-node",
-    "simple-node/*",
+    "0simple-node",
+    "0simple-node/*",
     "vite-react-simple",
     "vite-react-simple/*",
     "vite-svelte-microfrontends",
     "vite-svelte-microfrontends/*",
     "vite-vue-microfrontends",
     "vite-vue-microfrontends/*",
-    "rust-wasm",
-    "rust-wasm/*",
-    "redux-reducer-injection",
-    "redux-reducer-injection/*",
-    "shared-routing",
-    "shared-routing/*",
-    "shared-routes2",
-    "shared-routes2/*",
-    "shared-context",
-    "shared-context/*",
-    "styled-components",
-    "styled-components/*",
-    "shared-store-cross-framework",
-    "shared-store-cross-framework/*",
-    "third-party-scripts",
-    "third-party-scripts/*",
+    "0rust-wasm",
+    "0rust-wasm/*",
+    "0redux-reducer-injection",
+    "0redux-reducer-injection/*",
+    "0shared-routing",
+    "0shared-routing/*",
+    "0shared-routes2",
+    "0shared-routes2/*",
+    "0shared-context",
+    "0shared-context/*",
+    "0styled-components",
+    "0styled-components/*",
+    "0shared-store-cross-framework",
+    "0shared-store-cross-framework/*",
+    "0third-party-scripts",
+    "0third-party-scripts/*",
     "vue-cli",
     "vue-cli/*",
     "vue2-in-vue3",
