staging back examples

--- a/package.json
+++ b/package.json
@@ -109,8 +109,8 @@
     "typescript-react-fallback/*",
     "typescript-react-monorepo",
     "typescript-react-monorepo/*",
-    "0typescript-react-monorepo-test",
-    "0typescript-react-monorepo-test/*",
+    "typescript-react-monorepo-test",
+    "typescript-react-monorepo-test/*",
     "native-federation-react",
     "native-federation-tests-typescript-plugins",
     "native-federation-tests-typescript-plugins/*",
@@ -131,16 +131,16 @@
     "version-discrepancy/*",
     "vite-react-microfrontends",
     "vite-react-microfrontends/*",
-    "0simple-node",
-    "0simple-node/*",
+    "simple-node",
+    "simple-node/*",
     "vite-react-simple",
     "vite-react-simple/*",
     "vite-svelte-microfrontends",
     "vite-svelte-microfrontends/*",
     "vite-vue-microfrontends",
     "vite-vue-microfrontends/*",
-    "0rust-wasm",
-    "0rust-wasm/*",
+    "rust-wasm",
+    "rust-wasm/*",
     "0redux-reducer-injection",
     "0redux-reducer-injection/*",
     "0shared-routing",
