staging back examples

--- a/package.json
+++ b/package.json
@@ -141,20 +141,20 @@
     "vite-vue-microfrontends/*",
     "rust-wasm",
     "rust-wasm/*",
-    "0redux-reducer-injection",
-    "0redux-reducer-injection/*",
-    "0shared-routing",
-    "0shared-routing/*",
-    "0shared-routes2",
-    "0shared-routes2/*",
-    "0shared-context",
-    "0shared-context/*",
-    "0styled-components",
-    "0styled-components/*",
-    "0shared-store-cross-framework",
-    "0shared-store-cross-framework/*",
-    "0third-party-scripts",
-    "0third-party-scripts/*",
+    "redux-reducer-injection",
+    "redux-reducer-injection/*",
+    "shared-routing",
+    "shared-routing/*",
+    "shared-routes2",
+    "shared-routes2/*",
+    "shared-context",
+    "shared-context/*",
+    "styled-components",
+    "styled-components/*",
+    "shared-store-cross-framework",
+    "shared-store-cross-framework/*",
+    "third-party-scripts",
+    "third-party-scripts/*",
     "vue-cli",
     "vue-cli/*",
     "vue2-in-vue3",
