--- a/cra-react-app-rewired/remote/package.json
+++ b/cra-react-app-rewired/remote/package.json
@@ -12,8 +12,7 @@
     "test": "react-app-rewired test",
     "eject": "react-scripts eject"
   },
-  "eslintConfig": {
-  },
+  "eslintConfig": {},
   "browserslist": {
     "production": [
       ">0.2%",
