--- a/shared-store-cross-framework/package.json
+++ b/shared-store-cross-framework/package.json
@@ -13,7 +13,7 @@
     "build": "lerna run --scope=shared-store-cross-framework_* build",
     "serve": "lerna run --scope=shared-store-cross-framework_* --parallel serve",
     "clean": "lerna run --scope=shared-store-cross-framework_* --parallel clean",
-    "e2e:ci": "yarn start & wait-on http-get://localhost:3001/ && npx cypress run --config-file ../cypress/config/cypress.config.ts --config '{\"supportFile\": \"../../cypress/support/e2e.ts\"}' --spec \\\"./e2e/tests/runAll.cy.ts\\\" --browser=chrome"
+    "e2e:ci": "yarn start & wait-on http-get://localhost:3001/ && npx cypress run --config-file ../cypress/config/cypress.config.ts --config '{\"supportFile\": \"../cypress/support/e2e.ts\"}' --spec \"./e2e/tests/runAll.cy.ts\" --browser=chrome"
   },
   "devDependencies": {
     "lerna": "3.22.1",
