--- a/third-party-scripts/package.json
+++ b/third-party-scripts/package.json
@@ -3,8 +3,7 @@
   "private": true,
   "workspaces": {
     "packages": [
-      "./app1",
-      "./app2"
+      "./app1"
     ]
   },
   "version": "0.0.0",
@@ -13,9 +12,7 @@
     "build": "lerna run build",
     "serve": "lerna run --scope=third-party-scripts_* --parallel serve",
     "clean": "lerna run --scope=third-party-scripts_* --parallel clean",
-    "e2e:ci": "yarn start & wait-on http-get://localhost:3001/ && npx cypress run --config-file ../cypress/config/cypress.config.ts --config '{\"supportFile\": \"../../cypress/support/e2e.ts\"}' --spec \"./e2e/tests/*.cy.ts\" --browser=chrome"
+    "e2e:ci": "yarn start & wait-on http-get://localhost:3001/ && npx cypress run --config-file ../cypress/config/cypress.config.ts --config '{\"supportFile\": \"../cypress/support/e2e.ts\"}' --spec \"./e2e/tests/*.cy.ts\" --browser=chrome"
   },
-  "devDependencies": {
-    "lerna": "3.22.1"
-  }
+  "devDependencies": {}
 }
