staging back examples

--- a/i18next-nextjs-react/package.json
+++ b/i18next-nextjs-react/package.json
@@ -17,7 +17,7 @@
   "author": "Frédéric JAMMES",
   "license": "ISC",
   "devDependencies": {
-    "concurrently": "latest",
+    "concurrently": "8.2.2",
     "wait-on": "7.0.1"
   }
 }
