--- a/native-federation-react/package.json
+++ b/native-federation-react/package.json
@@ -25,6 +25,8 @@
     "@softarc/native-federation": "0.9.2-beta.7",
     "@softarc/native-federation-runtime": "0.9.2-beta.7",
     "@types/node": "18.16.0",
+    "@types/react": "17.0.38",
+    "@types/webpack": "^5.28.5",
     "concurrently": "7.6.0",
     "esbuild": "0.17.18",
     "esm-node-services": "0.7.14",
