--- a/cra/package.json
+++ b/cra/package.json
@@ -16,6 +16,7 @@
   },
   "devDependencies": {
     "wait-on": "^7.1.0",
-    "concurrently": "7.6.0"
+    "concurrently": "7.6.0",
+    "forever": "4.0.3"
   }
 }
