--- a/nextjs-react/package.json
+++ b/nextjs-react/package.json
@@ -2,6 +2,11 @@
   "name": "nextjs-react",
   "version": "1.0.0",
   "description": "",
+  "private": true,
+  "workspaces": [
+    "host-app",
+    "remote-app"
+  ],
   "main": "index.js",
   "scripts": {
     "install:apps": "concurrently \"yarn --cwd host-app\" \"yarn --cwd remote-app\"",
@@ -12,7 +17,7 @@
   "author": "rahulteja-dev",
   "license": "ISC",
   "dependencies": {
-    "concurrently": "^7.6.0",
-    "wait-on": "7.0.1"
+    "concurrently": "^8.2.2",
+    "wait-on": "7.1.0"
   }
 }
