--- a/typescript-monorepo/app1/package.json
+++ b/typescript-monorepo/app1/package.json
@@ -9,7 +9,7 @@
     "@types/react": "18.0.38",
     "@types/react-dom": "18.0.11",
     "babel-loader": "8.2.5",
-    "typescript-monorepo_app2": "file:../app2",
+    "typescript-monorepo_app2": "*",
     "html-webpack-plugin": "5.5.3",
     "serve": "14.2.1",
     "typescript": "4.3.5",
