--- a/cra/host/package.json
+++ b/cra/host/package.json
@@ -7,7 +7,7 @@
     "react-scripts": "5.0.1"
   },
   "scripts": {
-    "start": "forever start ./scripts/start.js",
+    "start": "rm -rf ~/.forever/sock; forever start ./scripts/start.js",
     "stop": "forever stop ./scripts/start.js",
     "build": "node ./scripts/build.js",
     "test": "react-scripts test",
