--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "cra-react-app-rewired/*",
     "css-isolation",
     "css-isolation/*",
-    "cypress",
+    "cypress-e2e",
     "react-storybook",
     "react-storybook/*",
     "delegate-modules",
@@ -72,6 +72,7 @@
     "different-react-versions-typescript",
     "different-react-versions-typescript/*",
     "dynamic-remotes-node",
+    "dynamic-remotes-node/*",
     "dynamic-system-host",
     "dynamic-system-host/*",
     "federated-css",
@@ -170,19 +171,21 @@
     "vue3-demo-federation-with-vite/*"
   ],
   "resolutions": {
-    "puppeteer": "^19.0.0",
+    "puppeteer": "^21.5.0",
     "concurrently": "^7.6.0",
-    "cypress": "10.11.0"
+    "cypress": "13.4.0"
   },
   "devDependencies": {
+    "asn1": "^0.2.6",
+    "abbrev": "^2.0.0",
     "@shelex/cypress-allure-plugin": "2.38.3",
-    "allure-commandline": "2.21.0",
+    "allure-commandline": "2.24.1",
     "concurrently": "7.6.0",
     "cross-spawn": "7.0.3",
-    "cypress": "10.11.0",
+    "cypress": "13.4.0",
     "cypress-fill-command": "1.0.2",
-    "cypress-real-events": "1.10.3",
-    "cypress-wait-until": "1.7.2",
+    "cypress-real-events": "1.11.0",
+    "cypress-wait-until": "2.0.1",
     "forever": "4.0.3",
     "husky": "7.0.4",
     "jest": "26.6.3",
