--- a/package.json
+++ b/package.json
@@ -22,11 +22,11 @@
     "advanced-api/dynamic-remotes-runtime-environment-variables",
     "advanced-api/dynamic-remotes-synchronous-imports/*",
     "advanced-api/dynamic-remotes-synchronous-imports",
-    "0angular-universal-ssr",
-    "0angular11-microfrontends-ngrx",
-    "0angular11-microfrontends-ngxs",
-    "0angular11-microfrontends-scully",
-    "0angular12-microfrontends",
+    "angular-universal-ssr",
+    "angular11-microfrontends-ngrx",
+    "angular11-microfrontends-ngxs",
+    "angular11-microfrontends-scully",
+    "angular12-microfrontends",
     "umd-federation",
     "umd-federation/*",
     "angular14-react",
