rename package conflicts

--- a/federated-library-from-cdn/app1/package.json
+++ b/federated-library-from-cdn/app1/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "app1",
+  "name": "federated-library-from-cdn-app1",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
