--- a/federated-library-from-cdn/app2/package.json
+++ b/federated-library-from-cdn/app2/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "app2",
+  "name": "federated-library-from-cdn-app2",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
