--- a/federated-library-from-cdn/remoteLibrary/package.json
+++ b/federated-library-from-cdn/remoteLibrary/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "remote-cdn",
+  "name": "federated-library-from-cdn-remote-cdn",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
