--- a/typescript-react-monorepo/packages/app2/package.json
+++ b/typescript-react-monorepo/packages/app2/package.json
@@ -18,8 +18,8 @@
   },
   "devDependencies": {
     "@module-federation/typescript": "^2.3.0",
-    "@types/react": "^18.0.27",
-    "@types/react-dom": "^18.0.10",
+    "@types/react": "18.2.37",
+    "@types/react-dom": "18.2.15",
     "babel-loader": "^9.1.2",
     "core-js": "^3.28.0",
     "html-webpack-plugin": "^5.5.0",
